Add logout button to session view and allow unbanning kicked sessions
Allow changing message sort direction
Don't escape CSS (fixes use of html entities)
Allow changing frame sorting

Version 1.21 - Aug. 29, 2016
Don't display empty option for system messages in delete messages by name
Don't show a kick button on your own session in the list of active sessions
Allow ignoring incognito chatters
Prevent posting the same message twice, if no other message was posted in-between
Instruct browser not to send referrer.
Enable image embedding without cookies as there is no more risk of session leakage.
Allow configuring password and nickname regex
Prevent browser from caching at all.
Add external CSS setting for large stylesheets
Make /me work with custom texts set under system messages in setup
Set replace of a filter used for kicking as kickmessage
Add an option to first display a greeting message, before showing messages

Version 1.20.6 - Jul. 23, 2016
Simplify ignore logic + disallow ignoring chatters with higher status
Delete messages based on public message limit, no buffer for private ones needed
Allow deleting messages by name, when only PMs were sent

Version 1.20.5 - Jul. 19, 2016
Check permission before selectively deleting a message.

Version 1.20.4 - Jul. 12, 2016
Third attempt to fix the same bug

Version 1.20.3 - Jul. 10, 2016
Yesterdays bugfix broke more than it fixed, refixed.

Version 1.20.2 - Jul. 9, 2016
Fix bug preventing to send PMs to number-only nicknames

Version 1.20.1 - Jun. 13, 2016
Bugfix when logging guests out via admin section
Don't hide image embedding option in profile with cookies disabled
Making a moderator to member now sets incognito back to disabled

Version 1.20 - May 15, 2016
Add setting in profile to allow offline inbox for: staff, members or everyone
Completely fix link-redirection

Version 1.19.2 - May 7, 2016
Remove JavaScript "load only new messages" feature
Add JS auto-refresh to header instead

Version 1.19.1 - May 1, 2016