@@ -2,6 +2,7 @@ Add logout button to session view and allow unbanning kicked sessions
 Allow changing message sort direction
 Don't escape CSS (fixes use of html entities)
 Allow changing frame sorting
+Allow making filters case sensitive
 
 Version 1.21 - Aug. 29, 2016
 Don't display empty option for system messages in delete messages by name
